--- a/99-headloss/style.css
+++ b/99-headloss/style.css
@@ -1,10 +1,12 @@
 body {
     background-image: url("assets/background.jpg");
-
+    backdrop-filter: blur(1.5px);
 }
 
 .container {
     background: rgb(231, 206, 174); /* rgb(237, 187, 121); */
+    opacity: 0.9;
+    
     min-height: 1000px;
     max-width: 1000px;
     margin: 20px auto;
