--- a/99-headloss/style.css
+++ b/99-headloss/style.css
@@ -1,6 +1,7 @@
 body {
-    background-image: url("assets/background.jpg");
+    background-image: url("../assets/background.jpg");
     backdrop-filter: blur(1.5px);
+
 }
 
 .container {
@@ -12,7 +13,6 @@ body {
     margin: 20px auto;
     padding: 0;
     border-radius: 50px;
-    margin-bottom: 0;
 
 }
 
@@ -60,6 +60,10 @@ body {
     --bs-btn-hover-border-color: rgb(148, 201, 202);
     --bs-btn-border-color: rgb(103, 154, 155);
     --bs-btn-active-bg:rgb(148, 201, 202);
+    --bs-btn-active-border-color: rgb(103, 154, 155);
+    --bs-btn-disabled-bg : rgb(148, 201, 202);
+    --bs-btn-disabled-border-color: rgb(103, 154, 155);
+
 }
 
 .card-image {
@@ -74,6 +78,43 @@ body {
     text-align: center;
 }
 
+.card-image:hover {
+    transform: scale(0.90); /* Dilediğiniz ölçüde zoom efekti ekleyebilirsiniz */
+    transition: transform 0.3s ease;
+}
+
 .dropdown-menu {
     --bs-dropdown-link-active-bg: rgb(148, 201, 202);
 }
+
+.btn-outline-primary {
+    --bs-btn-color:black;
+    --bs-btn-border-color: rgb(103, 154, 155);
+    --bs-btn-active-bg:rgb(103, 154, 155);
+    --bs-btn-active-border-color:rgb(103, 154, 155);
+}
+
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+.result {
+    margin: 10px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+}
+
+.form-control:disabled {
+    background-color: rgb(235, 226, 226);
+}
+
+.danger {
+    color: red;
+}
+
