--- a/99-headloss/xxxx-style.css
+++ b/99-headloss/xxxx-style.css
@@ -1,7 +1,6 @@
 body {
-    background-image: url("../assets/background.jpg");
+    background-image: url("assets/background.jpg");
     backdrop-filter: blur(1.5px);
-
 }
 
 .container {
@@ -13,6 +12,7 @@ body {
     margin: 20px auto;
     padding: 0;
     border-radius: 50px;
+    margin-bottom: 0;
 
 }
 
@@ -76,35 +76,4 @@ body {
 
 .dropdown-menu {
     --bs-dropdown-link-active-bg: rgb(148, 201, 202);
-}
-
-.btn-outline-primary {
-    --bs-btn-color:black;
-    --bs-btn-border-color: rgb(103, 154, 155);
-    --bs-btn-active-bg:rgb(103, 154, 155);
-    --bs-btn-active-border-color:rgb(103, 154, 155);
-}
-
-
-.hide {
-    display: none;
-}
-
-.show {
-    display: block;
-}
-
-.result {
-    margin: 10px;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-}
-
-.form-control:disabled {
-    background-color: rgb(235, 226, 226);
-}
-
-.danger {
-    color: red;
 }
