--- a/99-headloss/style.css
+++ b/99-headloss/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../assets/background.jpg");
+    background-image: url("assets/background.jpg");
     backdrop-filter: blur(1.5px);
 
 }
@@ -79,7 +79,7 @@ body {
 }
 
 .card-image:hover {
-    transform: scale(0.90); /* Dilediğiniz ölçüde zoom efekti ekleyebilirsiniz */
+    transform: scale(0.90); 
     transition: transform 0.3s ease;
 }
 
@@ -118,3 +118,59 @@ body {
     color: red;
 }
 
+/* CONTACT ICIN */
+.form-contact {
+    position: relative;
+    display: block;
+}
+
+.form-contact span {
+
+    position: absolute;
+    top: 9px;
+    left: 2px;
+    transition: all 0.2s ease;
+    transform-origin: 0 0; 
+    cursor: text; 
+    font-style: oblique;
+    font-weight: bolder;
+    color: #5f6266;
+}
+
+
+
+
+.form-input {
+    border: none;
+    border-bottom: 3px solid #fff;
+    display: block;
+    width: 100%;
+    height: 43px;
+    
+    background: none;
+    font-style: oblique;
+    
+}
+
+
+.form-input:focus, .form-input:valid {
+    outline: none;
+    background: none;
+    border: none;
+    border-bottom: 3px solid rgb(103, 154, 155);
+    
+}
+
+.form-input:focus + span, .form-input:valid + span {
+    color: black;
+    transform: translateX(-120px) scale(1); 
+    /* transform: translateY(-22px) scale(0.8);   */
+}
+
+.form-input:invalid {    
+    border-bottom: 3px solid #fff;
+}
+
+.form-contact textarea {
+    min-height: 75px;
+}
